feat(auth): add login functionality with validation and API integration
- Implement login UI with full page layout and styles

- Integrate login with backend API using custom Axios client

- Add centralized error handling with interceptors and unified response schema

- Implement form handling with react-hook-form and validation with yup

- Add TypeScript types for form data and API responses

- Use TanStack React Query for API state management

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "monsters-app",
-    "slug": "monsters-app",
+    "name": "wallet-mobile",
+    "slug": "wallet-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "monstersapp",
+    "scheme": "walletapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
