--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.12.2",
     "expo": "54.0.8",
     "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -47,7 +48,8 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
