--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "lintAll": "npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.89.0",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/elements": "^2.6.4",
+    "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
-    "expo": "54.0.8",
+    "expo": "~54.0.10",
+    "expo-auth-session": "^7.0.8",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.8",
@@ -29,34 +30,35 @@
     "expo-image": "~3.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.6",
+    "expo-router": "~6.0.8",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "jotai": "^2.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "react-native": "0.81.4",
+    "react-hook-form": "^7.63.0",
+    "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
+    "react-native-web": "^0.21.1",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
-    "yup": "^1.7.0",
-    "zustand": "^5.0.8"
+    "react-native-worklets": "^0.5.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@tanstack/react-query-devtools": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react": "^19.1.0",
-    "eslint": "^9.25.0",
+    "eslint": "^9.36.0",
     "eslint-config-expo": "~10.0.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "typescript": "~5.9.2"
   },
   "private": true
