--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "metro.config.js",
+    "babel.config.js"
+  ],
+  "exclude": ["node_modules/*", "dist/*", ".expo/*", "private/*"]
 }
